image path updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div  class="intro">
   <h1><i><q>HII I AM SURYA</q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>HII I AM SURYA </q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>HII I AM SURYA </q></i></h1>
   <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i><q>Welcome to my Website</q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>Welcome to my Website</q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>Welcome to my Website</q></i></h2>
-  <img  class="pro" src="surya4.jpg" alt="profile pic">
+  <img  class="pro" src="images/surya4.jpg" alt="profile pic">
 </div>
 <div id="welcome-section" class="bio">
 <blockquote>
@@ -24,24 +24,24 @@ problem-solving. Motivative Active person</q></b></p>
 <div id="projects" class="work">
   <h3 class="work-header">These are some of web pages I had done</h3>
   <a href="project.html" target="_blank" class="project project-tile">
-    <img class="project-pic" src="project1.png" alt="project">
+    <img class="project-pic" src="images/project1.png" alt="project">
     <div class="project-title"><b>Tribute Page of Subhash Chandra Bose</b>
 </div>
   </a>
   <a href="survey.html" target="_blank" class="project project-tile">
-    <img class="project-pic" src="project2.png" alt="project">
+    <img class="project-pic" src="images/project2.png" alt="project">
     <div class="project-title"><b>Survey Form</b></div>
   </a>
   <a href="product.html" target="_blank" class="project project-tile">
-    <img class="project-pic" src="project3.png" alt="project">
+    <img class="project-pic" src="images/project3.png" alt="project">
     <div class="project-title"><b>Product landing page</b></div>
   </a>
   <a href="technical.html" target="_blank" class="project project-tile">
-    <img class="project-pic" src="project4.png" alt="project">
+    <img class="project-pic" src="images/project4.png" alt="project">
     <div class="project-title"><b>Technical Data of PHP</b></div>
   </a>
   <a href="https://codepen.io/surya-rockzz/pen/vbXjVJ" target="_blank" class="project project-tile">
-    <img class="project-pic" src="website.png" alt="project">
+    <img class="project-pic" src="images/website.png" alt="project">
     <div class="project-title"><b>Persnol Portifolio</b></div>
   </a>
  
@@ -52,37 +52,37 @@ problem-solving. Motivative Active person</q></b></p>
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 8</div>
-  <img src="Book title.jpg" alt = "Quotations" style="width:100%">
+  <img src="images/Book title.jpg" alt = "Quotations" style="width:100%">
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 8</div>
-  <img src="Book page 1.jpg" alt = "Quotations" style="width:100%">
+  <img src="images/Book page 1.jpg" alt = "Quotations" style="width:100%">
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 8</div>
-  <img src="Book page 2.jpg" alt = "Quotations" style="width:100%">
+  <img src="images/Book page 2.jpg" alt = "Quotations" style="width:100%">
 </div>
 <div class="mySlides fade">
   <div class="numbertext">4 / 8</div>
-  <img src="Book page 3.jpg" alt = "Quotations" style="width:100%">
+  <img src="images/Book page 3.jpg" alt = "Quotations" style="width:100%">
 </div>
 <div class="mySlides fade">
   <div class="numbertext">5 / 8</div>
-  <img src="Book page 4.jpg" alt = "Quotations" style="width:100%">
+  <img src="images/Book page 4.jpg" alt = "Quotations" style="width:100%">
 </div>
 <div class="mySlides fade">
   <div class="numbertext">6 / 8</div>
-  <img src="Book page 5.jpg" alt = "Quotations" style="width:100%">
+  <img src="images/Book page 5.jpg" alt = "Quotations" style="width:100%">
 </div>
 <div class="mySlides fade">
   <div class="numbertext">7 / 8</div>
-  <img src="Book page 6.jpg" alt = "Quotations" style="width:100%">
+  <img src="images/Book page 6.jpg" alt = "Quotations" style="width:100%">
 </div>
 <div class="mySlides fade">
   <div class="numbertext">8 / 8</div>
-  <img src="Bookpage7.png" alt = "Quotations" style="width:100%">
+  <img src="images/Bookpage7.png" alt = "Quotations" style="width:100%">
 </div>
 
 
@@ -138,11 +138,11 @@ function showSlides(n) {
     <h3>Reach Me On......</h3>
     <p>any time Welcome</p>
   </div>
-  <a href="https://www.facebook.com/profile.php?id=100006750375927" target="_blank" class="contact-details"><img class="contact-pic" src="facebook.png" alt="facebook"></a>
-  <a  href="https://www.linkedin.com/in/surya-narayana-35ba78168/" target="_blank" class="contact-details"><img class="contact-pic" src="linkedin.png" alt="linkedin"></a>
-  <a href="https://www.instagram.com/_this_is_surya/" class="contact-details"><img class="contact-pic" src="instagram.png" alt="instagram"></a>
-  <a href="https://twitter.com/surya8978" target="_blank" class="contact-details"><img class="contact-pic" src="twitter.png" alt="twitter"></a>
-  <a href="suryanarayana9100.posina@gmail.com" class="contact-details" ><img class="contact-pic" src="gmail.png" alt="gmail"></a> 
+  <a href="https://www.facebook.com/profile.php?id=100006750375927" target="_blank" class="contact-details"><img class="contact-pic" src="images/facebook.png" alt="facebook"></a>
+  <a  href="https://www.linkedin.com/in/surya-narayana-35ba78168/" target="_blank" class="contact-details"><img class="contact-pic" src="images/linkedin.png" alt="linkedin"></a>
+  <a href="https://www.instagram.com/_this_is_surya/" class="contact-details"><img class="contact-pic" src="images/instagram.png" alt="instagram"></a>
+  <a href="https://twitter.com/surya8978" target="_blank" class="contact-details"><img class="contact-pic" src="images/twitter.png" alt="twitter"></a>
+  <a href="suryanarayana9100.posina@gmail.com" class="contact-details" ><img class="contact-pic" src="images/gmail.png" alt="gmail"></a> 
 </div>
 <footer>Visit Again.....
   <p>&copy; Created by Suryanarayana</p>
