--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div  class="intro">
   <h1><i><q>HII I AM SURYA</q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>HII I AM SURYA </q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>HII I AM SURYA </q></i></h1>
   <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i><q>Welcome to my Website</q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>Welcome to my Website</q>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<q>Welcome to my Website</q></i></h2>
-  <img  class="pro" src="images/surya4.jpg" alt="profile pic">
+  <img  class="pro" src="/images/surya4.jpg" alt="profile pic">
 </div>
 <div id="welcome-section" class="bio">
 <blockquote>
